# stemmadot

./: .coveragerc  .gitignore  .gitlab-ci.yml  LICENSE  README.rst  pyproject.toml
.github/workflows/: docs.yml  testing.yml
docs/: conf.py  index.rst
stemmadot/: main.py
tests/: test_romans.py
tests/data/: romans-colors.json  romans-colors.toml  romans.stem
